Cleaned up magic numbers in UserConverterTest